--- a/Cleaning_Wiki.ipynb
+++ b/Cleaning_Wiki.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 115,
    "id": "2066d0ef",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,10 @@
     "import json\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "from sqlalchemy import create_engine\n",
+    "from config import db_password\n",
+    "import time"
    ]
   },
   {
@@ -2105,7 +2108,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10976\\3605422733.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# this will throw an error!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mbox_office\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[0mmatches_form_one\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[0mmatches_form_two\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16160\\3605422733.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# this will throw an error!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mbox_office\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[0mmatches_form_one\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[0mmatches_form_two\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1536\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1537\u001b[0m         raise ValueError(\n\u001b[1;32m-> 1538\u001b[1;33m             \u001b[1;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1539\u001b[0m             \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1540\u001b[0m         )\n",
       "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
      ]
@@ -3404,7 +3407,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "16bb2f9f",
+   "id": "1a7352fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3423,7 +3426,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "8f1ca199",
+   "id": "9f8774c3",
    "metadata": {},
    "outputs": [
     {
@@ -3541,7 +3544,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "827b84ef",
+   "id": "2b64af74",
    "metadata": {},
    "outputs": [
     {
@@ -3672,7 +3675,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "96c27cbd",
+   "id": "19f093f0",
    "metadata": {},
    "outputs": [
     {
@@ -3746,7 +3749,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "45fec136",
+   "id": "3ae12868",
    "metadata": {},
    "outputs": [
     {
@@ -3779,7 +3782,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "ec29a387",
+   "id": "eead4c6b",
    "metadata": {},
    "outputs": [
     {
@@ -3812,7 +3815,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "4bbbe13b",
+   "id": "161ae137",
    "metadata": {},
    "outputs": [
     {
@@ -3845,7 +3848,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "2b337a80",
+   "id": "af459047",
    "metadata": {},
    "outputs": [
     {
@@ -3878,7 +3881,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "f5379c13",
+   "id": "5af80017",
    "metadata": {},
    "outputs": [
     {
@@ -3911,7 +3914,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "6a5a31bc",
+   "id": "bd396f61",
    "metadata": {},
    "outputs": [
     {
@@ -4028,7 +4031,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "f1927d26",
+   "id": "8b91b17e",
    "metadata": {},
    "outputs": [
     {
@@ -4049,7 +4052,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "f640ddb6",
+   "id": "1cb16047",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4059,7 +4062,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "7829b113",
+   "id": "b4eb52ad",
    "metadata": {},
    "outputs": [
     {
@@ -4522,7 +4525,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "98baf499",
+   "id": "bebf1acb",
    "metadata": {},
    "outputs": [
     {
@@ -4554,7 +4557,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "8f9dc74e",
+   "id": "7d9372cb",
    "metadata": {},
    "outputs": [
     {
@@ -4593,7 +4596,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "6a2721fb",
+   "id": "958bc482",
    "metadata": {},
    "outputs": [
     {
@@ -4724,7 +4727,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "7499614d",
+   "id": "168c24d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4734,7 +4737,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "efac3c6f",
+   "id": "508919c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4748,7 +4751,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ce044cb7",
+   "id": "e854a4c3",
    "metadata": {},
    "outputs": [
     {
@@ -5240,7 +5243,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "1015d321",
+   "id": "be33d9fa",
    "metadata": {},
    "outputs": [
     {
@@ -5263,7 +5266,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "77faab5b",
+   "id": "0c248dcd",
    "metadata": {},
    "outputs": [
     {
@@ -5285,7 +5288,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "cb122568",
+   "id": "0422f9dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5300,7 +5303,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "8f2f3f48",
+   "id": "66a66573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5324,8 +5327,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 106,
+   "id": "05fdc0d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "9ccf9641",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "6d5d89f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "e6a1f59b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "e51bf98e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "7659aed9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "fe761bad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/movie_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "7e3f3153",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(db_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "2566b001",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_df.to_sql(name='movies', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "12713a2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "importing rows 0 to 1000000...Done. 41.06310844421387 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 80.60730147361755 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 117.91501259803772 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 154.7728989124298 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 192.04064273834229 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 230.0455493927002 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 266.39644980430603 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 304.47297286987305 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 342.0723366737366 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 379.935937166214 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 418.18366408348083 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 455.7152364253998 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 492.54339599609375 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 530.1168119907379 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 567.5691132545471 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 605.3508861064911 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 642.0397353172302 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 679.6310710906982 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 717.0677139759064 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 755.0744593143463 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 792.9412937164307 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 831.9993710517883 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 869.5190649032593 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 907.6584944725037 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 944.6742806434631 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 983.4177753925323 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 984.4749457836151 total seconds elapsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a variable for the number of rows imported\n",
+    "rows_imported = 0\n",
+    "\n",
+    "# get the start_time from time.time()\n",
+    "start_time = time.time()\n",
+    "\n",
+    "for data in pd.read_csv(f'{file_dir}ratings.csv', chunksize=1000000):\n",
+    "\n",
+    "    # print out the range of rows that are being imported\n",
+    "    print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\n",
+    "\n",
+    "    data.to_sql(name='ratings', con=engine, if_exists='append')\n",
+    "\n",
+    "    # increment the number of rows imported by the size of 'data'\n",
+    "    rows_imported += len(data)\n",
+    "    \n",
+    " # add elapsed time to final print out\n",
+    "    print(f'Done. {time.time() - start_time} total seconds elapsed')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ca716221",
+   "id": "82769ac7",
    "metadata": {},
    "outputs": [],
    "source": []
